# tooler

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  active.py  colors.py  command.py  env.py  hosts.py  local.py  output.py  pip-requirements.txt  pyproject.toml  result.py  setup.py  shell.py  ssh.py  tooler.py  util.py
example/: disk.py  example.py  jab.py  photo.py  tool.py  tooler
tests/: command.py  test_command.py  test_examples.py
tooler/: __init__.py  active.py  ansi.py  colors.py  command.py  env.py  exceptions.py  hosts.py  main.py  output.py  parser.py  shell.py  tooler.py  util.py  version.py
tooler/clide/: ansi.py  english.py
